idc_singapore/idc_singa_db.tf
resource "aws_instance" "idc-singa_db" {
  provider = aws.singa
  ami           = var.singa-ami
  instance_type = "t2.micro"
  associate_public_ip_address = "true"
  private_ip = "10.4.1.100"
  subnet_id = aws_subnet.idc-singa.id
  key_name = var.singakey
  security_groups = [aws_security_group.idc-singa.id]
  tags = {
    Name = "idc-singa_db"
  }
  user_data = <<EOE
#!/bin/bash
ip route add 10.0.0.0/8 via 10.4.1.50
hostnamectl --static set-hostname singa-db
yum install -y mariadb-server mariadb lynx
systemctl start mariadb && systemctl enable mariadb
echo -e "\n\nqwe123\nqwe123\ny\ny\ny\ny\n" | /usr/bin/mysql_secure_installation
mysql -uroot -pqwe123 -e "CREATE DATABASE sample; GRANT ALL PRIVILEGES ON *.* TO 'admin'@'%' IDENTIFIED BY 'qwe123'; GRANT REPLICATION SLAVE ON *.* TO 'repl_user'@'%' IDENTIFIED BY 'qwe123'; flush privileges;"
mysql -uroot -pqwe123 -e "USE sample;CREATE TABLE EMPLOYEES (ID int(11) UNSIGNED AUTO_INCREMENT PRIMARY KEY,NAME VARCHAR(45),ADDRESS VARCHAR(90));"
cat <<EOT> /etc/my.cnf
[mysqld]
datadir=/var/lib/mysql
socket=/var/lib/mysql/mysql.sock
symbolic-links=0           
log-bin=mysql-bin
server-id=1
[mysqld_safe]
log-error=/var/log/mariadb/mariadb.log
pid-file=/var/run/mariadb/mariadb.pid
!includedir /etc/my.cnf.d
EOT
systemctl restart mariadb
cat <<EOT> /home/ec2-user/list.txt
10.1.3.100
10.1.4.100
10.2.1.100
10.2.1.200
10.3.3.100
10.4.1.100
10.4.1.200
10.4.1.50
web1.awsseoul.internal
web2.awsseoul.internal
db.idcseoul.internal
dns.idcseoul.internal
web1.awssinga.internal
db.idcsinga.internal
dns.idcsinga.internal
cgw.idcsinga.internal
EOT
cat << EOF > /home/ec2-user/pingall.sh
#!/bin/bash
date
cat /home/ec2-user/list.txt |  while read output
do
    if [ `echo \$output | grep "10" | wc -l` -eq 0 ]; then
        nslookup \$output >/dev/null 2>/dev/null
        if [ \$? -eq 0 ]; then
            echo "[  UP domain] \$output"
        else
            echo "[DOWN domain] \$output"
        fi
    else
        ping -c 1 -w 1 "\$output" > /dev/null 2>/dev/null
        if [ \$? -eq 0 ]; then
            echo "[  UP host  ] \$output"
        else
            echo "[DOWN host  ] \$output"
        fi
    fi
done
EOF
chmod +x /home/ec2-user/pingall.sh
EOE
  }
